<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="welcome_msg">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="build">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>

    <string name="action_settings">Settings</string>
</resources>
